--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Luccile Cha's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta
 			name="viewport"
